Fix header nav item spacing and responsiveness

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -91,8 +91,10 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  width: 16rem;
+  flex-wrap: wrap;
+  width: 25rem;
   padding-top: 1em;
+  padding-right: 15px;
 
   a {
     color: black;
